# ds

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  setup.py  streamlit_app.py
.github/workflows/: python_app_test.yml
commands/: flake8
commands/powershell/: install.sh
docs/: conf.py
ds_lib/config/: log.py  paths.py
ds_lib/utils/: env.py
notebooks/: pandas_cleaning.ipynb
requirements/: install.sh
resources/configuration/: basic_config.json
tests/: test_dependencies.py
